made the main app div 200 vh so that I can make sure that the nav is stuck to the top while scrolling and it passed the test. I will keep it that way for now

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 
 .App {
+  height: 200vh;
 }
 
 .App-logo {
